// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare module 'autoprefixer';

=====================================output=====================================
declare module "autoprefixer";

================================================================================
`;

exports[`global.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
namespace global {}
module global {}
global {}
declare global {}
declare /* module */ global {}
declare /* namespace */ global {}
declare module  global {}
declare namespace global {}

=====================================output=====================================
namespace global {}
module global {}
global {}
declare global {}
declare /* module */ global {}
declare /* namespace */ global {}
declare module global {}
declare namespace global {}

================================================================================
`;

exports[`global.ts format[babel-ts] 1`] = `
"\`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (2:1)
  1 | namespace global {}
> 2 | module global {}
    | ^
  3 | global {}
  4 | declare global {}
  5 | declare /* module */ global {}
Cause: \`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (2:0)"
`;

exports[`keyword.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
module X {}

module X {
  const x = 1;
}

module X {
  module X {}
}

module X {
  module X {
    const x = 1;
  }
}

namespace X {}

namespace X {
  const x = 1;
}

namespace X {
  namespace X {}
}

namespace X {
  namespace X {
    const x = 1;
  }
}

namespace /* module */ X {}
module /* namespace */ X {}
module /* namespace */ "x" {}

=====================================output=====================================
module X {}

module X {
  const x = 1;
}

module X {
  module X {}
}

module X {
  module X {
    const x = 1;
  }
}

namespace X {}

namespace X {
  const x = 1;
}

namespace X {
  namespace X {}
}

namespace X {
  namespace X {
    const x = 1;
  }
}

namespace /* module */ X {}
module /* namespace */ X {}
module /* namespace */ "x" {}

================================================================================
`;

exports[`keyword.ts format[babel-ts] 1`] = `
"\`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:1)
> 1 | module X {}
    | ^
  2 |
  3 | module X {
  4 |   const x = 1;
Cause: \`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:0)"
`;

exports[`module-nested.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare module abc1.def {}

export declare module abc2.def {}

export module abc3.def {}

module abc4.def {}

declare module abc5.def.ghi {}

export declare module abc2.def.ghi {}

export module abc3.def.ghi {}

module abc4.def.ghi {}

=====================================output=====================================
declare module abc1.def {}

export declare module abc2.def {}

export module abc3.def {}

module abc4.def {}

declare module abc5.def.ghi {}

export declare module abc2.def.ghi {}

export module abc3.def.ghi {}

module abc4.def.ghi {}

================================================================================
`;

exports[`module-nested.ts format[babel-ts] 1`] = `
"\`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:16)
> 1 | declare module abc1.def {}
    |                ^
  2 |
  3 | export declare module abc2.def {}
  4 |
Cause: \`module ... {}\` declarations must have a string name. Use \`namespace ... {}\` instead. (1:15)"
`;

exports[`namespace-function.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
namespace X {
    declare function f();
}

=====================================output=====================================
namespace X {
  declare function f();
}

================================================================================
`;

exports[`namespace-nested.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare namespace abc1.def {}

export declare namespace abc2.def {}

export namespace abc3.def {}

namespace abc4.def {}

declare namespace abc5.def.ghi {}

export declare namespace abc2.def.ghi {}

export namespace abc3.def.ghi {}

namespace abc4.def.ghi {}

=====================================output=====================================
declare namespace abc1.def {}

export declare namespace abc2.def {}

export namespace abc3.def {}

namespace abc4.def {}

declare namespace abc5.def.ghi {}

export declare namespace abc2.def.ghi {}

export namespace abc3.def.ghi {}

namespace abc4.def.ghi {}

================================================================================
`;
